folder restructure and check answers with inputs

--- a/app/views/check-your-email.html
+++ b/app/views/check-your-email.html
@@ -52,7 +52,7 @@
 
       {{ govukButton({
         text: "Sign in",
-        href: "latest/life-event-home"
+        href: "latest/00-life-event-home"
       }) }}
 
     </div>
