--- a/app/views/latest/02-multiple.html
+++ b/app/views/latest/02-multiple.html
@@ -24,7 +24,7 @@
         </p>
       -->
 
-      <form class="form" action="02-medical-info" method="post">
+      <form class="form" action="02a-medical-info" method="post">
 
         
 
