--- a/app/views/latest/03-tasklist.html
+++ b/app/views/latest/03-tasklist.html
@@ -15,7 +15,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="prepare-for-appointment">
+          <a class="govuk-link govuk-task-list__link" href="supporting-info/prepare-for-appointment">
             Prepare for appointment
           </a>
         </div>
@@ -23,7 +23,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           {% if data.prepareForAppointmentCompleted %}
           Entered
           {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Empty</strong>
+          <!-- <strong class="govuk-tag govuk-tag--blue">Empty</strong> -->
           {% endif %}
 
         </div>
@@ -31,7 +31,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="uploads">
+          <a class="govuk-link govuk-task-list__link" href="supporting-info/uploads">
             Uploads
           </a>
         </div>
@@ -39,14 +39,14 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           {% if data.uploadsCompleted %}
           Entered
           {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Empty</strong>
+          <!-- <strong class="govuk-tag govuk-tag--blue">Empty</strong> -->
           {% endif %}
         </div>
       </li>
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="comments">
+          <a class="govuk-link govuk-task-list__link" href="supporting-info/comments">
             Comments
           </a>
         </div>
@@ -54,7 +54,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           {% if data.commentsCompleted %}
           Entered
           {% else %}
-          <strong class="govuk-tag govuk-tag--blue">Empty</strong>
+          <!-- <strong class="govuk-tag govuk-tag--blue">Empty</strong> -->
           {% endif %}
         </div>
       </li>
@@ -65,7 +65,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="pregnancy-delivery">
+          <a class="govuk-link govuk-task-list__link" href="cause-of-death/pregnancy-delivery">
             Pregnancy and delivery
           </a>
         </div>
@@ -80,7 +80,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="cause-of-death">
+          <a class="govuk-link govuk-task-list__link" href="cause-of-death/cause-of-death">
             Cause of death
           </a>
         </div>
