--- a/app/views/latest/cause-of-death/cause-of-death.html
+++ b/app/views/latest/cause-of-death/cause-of-death.html
@@ -31,7 +31,7 @@ Cause of death – {{ serviceName }} – GOV.UK Prototype Kit
             Cause of death 
           </h1>
 
-          <form class="form" action="medical-info-check" method="post">
+          <form class="form" action="cause-of-death-form" method="post">
 
             <h2 class="govuk-heading-m">About the death</h2>
 
@@ -264,7 +264,7 @@ Cause of death – {{ serviceName }} – GOV.UK Prototype Kit
               <label class="govuk-label" id="AttendPractq" for="AttendPractq">
                  Qualifications 
               </label> 
-              <input class="govuk-input" id="AttendPractq" name="AttendPractq" type="text" aria-required="false" value="{{data['AttendPract'] or ['']}}">
+              <input class="govuk-input" id="AttendPractq" name="AttendPractq" type="text" aria-required="false" value="{{data['AttendPractq'] or ['']}}">
             </div>
 
             <div class="govuk-form-group">
