--- a/app/views/latest/parents-details/fathers-name.html
+++ b/app/views/latest/parents-details/fathers-name.html
@@ -36,14 +36,14 @@ href: "javascript:window.history.back()"
           <div id="yes-name-block" >
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-first-name">First name </label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-first-name" name="deceasedFirstName"
-                type="text" value="{{data['deceasedFirstName']}}">
+              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-first-name" name="fathersFirstName"
+                type="text" value="{{data['fathersFirstName']}}">
             </div>
 
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-middle-name" name="deceasedMiddleName"
-                type="text" value="{{data['deceasedMiddleName']}}">
+              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-middle-name" name="fathersMiddleName"
+                type="text" value="{{data['fathersMiddleName']}}">
               <!-- <p class="govuk-body">
                 <a href="#" class="govuk-link">Add more middle names</a>
               </p> -->
@@ -51,8 +51,8 @@ href: "javascript:window.history.back()"
 
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-last-name">Last name</label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-last-name" name="deceasedLastName"
-                type="text" value="{{data['deceasedLastName']}}">
+              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-last-name" name="fathersLastName"
+                type="text" value="{{data['fathersLastName']}}">
 
                  <p class="govuk-body  govuk-!-margin-top-4">
                 <a href="#" class="govuk-link">Add prefix or suffix</a>
