--- a/app/views/latest/parents-details/mothers-name.html
+++ b/app/views/latest/parents-details/mothers-name.html
@@ -36,14 +36,14 @@ href: "javascript:window.history.back()"
           <div id="yes-name-block" >
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-first-name">First name </label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-first-name" name="deceasedFirstName"
-                type="text" value="{{data['deceasedFirstName']}}">
+              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-first-name" name="mothersFirstName"
+                type="text" value="{{data['mothersFirstName']}}">
             </div>
 
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-middle-name" name="deceasedMiddleName"
-                type="text" value="{{data['deceasedMiddleName']}}">
+              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-middle-name" name="mothersMiddleName"
+                type="text" value="{{data['mothersMiddleName']}}">
               <!-- <p class="govuk-body">
                 <a href="#" class="govuk-link">Add more middle names</a>
               </p> -->
@@ -51,8 +51,8 @@ href: "javascript:window.history.back()"
 
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="deceased-last-name">Last name</label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-last-name" name="deceasedLastName"
-                type="text" value="{{data['deceasedLastName']}}">
+              <input class="govuk-input govuk-!-width-three-quarters" id="deceased-last-name" name="mothersLastName"
+                type="text" value="{{data['mothersLastName']}}">
 
                  <p class="govuk-body  govuk-!-margin-top-4">
                 <a href="#" class="govuk-link">Add prefix or suffix</a>
@@ -78,16 +78,16 @@ href: "javascript:window.history.back()"
               <label class="govuk-label govuk-label--s" for="prefix">
                 Maiden name
               </label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="prefix" name="prefix" type="text"
-                value="{{data['prefix']}}">
+              <input class="govuk-input govuk-!-width-three-quarters" id="mothersMaidenName" name="mothersMaidenName" type="text"
+                value="{{data['mothersMaidenName']}}">
             </div>
 
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="suffix">
                 Last name at marriage (if different from maiden name)
               </label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="suffix" name="suffix" type="text"
-                value="{{data['suffix']}}">
+              <input class="govuk-input govuk-!-width-three-quarters" id="mothersLastMarriageName" name="mothersLastMarriageName" type="text"
+                value="{{data['mothersLastMarriageName']}}">
             </div>
 
             
