--- a/app/views/latest/child-details/name-date.html
+++ b/app/views/latest/child-details/name-date.html
@@ -193,19 +193,40 @@ href: "javascript:window.history.back()"
           <!-- dont name their child only these show -->
 
           <div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Sex</legend>
+    <div class="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sex-1" name="sex" type="radio" value="Female" {{ checked("sex", "Female") }}>
+        <label class="govuk-label govuk-radios__label" for="sex-1">Female</label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sex-2" name="sex" type="radio" value="Male" {{ checked("sex", "Male") }}>
+        <label class="govuk-label govuk-radios__label" for="sex-2">Male</label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sex-3" name="sex" type="radio" value="Indeterminate" {{ checked("sex", "Indeterminate") }}>
+        <label class="govuk-label govuk-radios__label" for="sex-3">Indeterminate</label>
+      </div>
+    </div>
+  </fieldset>
+</div>
+
+          <!-- <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Sex</legend>
               <div class="govuk-radios">
-                <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio" id="sex-1" name="sex"
-                    value="FEMALE"><label class="govuk-label govuk-radios__label" for="sex-1">Female</label></div>
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" type="radio" id="sex-1" name="sex" value="Female" >
+                    <label class="govuk-label govuk-radios__label" for="sex-1">Female</label></div>
                 <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio" id="sex-2" name="sex"
-                    value="MALE"><label class="govuk-label govuk-radios__label" for="sex-2">Male</label></div>
+                    value="Male" ><label class="govuk-label govuk-radios__label" for="sex-2">Male</label></div>
                 <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio" id="sex-3" name="sex"
-                    value="INDETERMINATE"><label class="govuk-label govuk-radios__label"
+                    value="Indeterminate"><label class="govuk-label govuk-radios__label"
                     for="sex-3">Indeterminate</label></div>
               </div>
             </fieldset>
-          </div>
+          </div> -->
 
           <div id="dateOfDeathType_input" class="govuk-form-group">
             <fieldset class="govuk-fieldset">
@@ -216,7 +237,7 @@ href: "javascript:window.history.back()"
                     name="dateOfDeathType" value="FULL_DATE_OF_DEATH"><label class="govuk-label govuk-radios__label"
                     for="dateOfDeathType-1">Yes, their exact date of death</label></div>
                 <div class="govuk-radios__conditional" id="conditional-dateOfDeathType-0">
-                  <div class="govuk-form-group">
+                  <!-- <div class="govuk-form-group">
                     <fieldset class="govuk-fieldset">
                       <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Enter the date of death</legend>
                       <div id="dateOfDeath-hint" class="govuk-hint">For example, 23 11 2024.</div>
@@ -244,7 +265,46 @@ href: "javascript:window.history.back()"
                         </div>
                       </div>
                     </fieldset>
-                  </div>
+                  </div> -->
+
+
+  <div class="govuk-form-group">
+    <fieldset class="govuk-fieldset">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Enter the date of death</legend>
+      <div id="dateOfDeath-hint" class="govuk-hint">For example, 23 11 2024.</div>
+      <div id="dateOfDeath_input" class="govuk-date-input">
+        <div class="govuk-date-input__item">
+          <div class="govuk-form-group">
+            <label class="govuk-label govuk-date-input__label" for="dateOfDeath_input-day">Day</label>
+            <input id="dateOfDeath_input-day" name="dateOfDeath-day" inputmode="number" maxlength="2"
+              class="govuk-input govuk-input--width-2" aria-describedby="dateOfDeath-hint" autocomplete="off"
+              value="{{ data['dateOfDeath-day'] }}">
+          </div>
+        </div>
+        <div class="govuk-date-input__item">
+          <div class="govuk-form-group">
+            <label class="govuk-label govuk-date-input__label" for="dateOfDeath_input-month">Month</label>
+            <input id="dateOfDeath_input-month" name="dateOfDeath-month" inputmode="number" maxlength="2"
+              class="govuk-input govuk-input--width-2" aria-describedby="dateOfDeath-hint" autocomplete="off"
+              value="{{ data['dateOfDeath-month'] }}">
+          </div>
+        </div>
+        <div class="govuk-date-input__item">
+          <div class="govuk-form-group">
+            <label class="govuk-label govuk-date-input__label" for="dateOfDeath_input-year">Year</label>
+            <input id="dateOfDeath_input-year" name="dateOfDeath-year" inputmode="number" maxlength="4"
+              class="govuk-input govuk-input--width-4" aria-describedby="dateOfDeath-hint" autocomplete="off"
+              value="{{ data['dateOfDeath-year'] }}">
+          </div>
+        </div>
+      </div>
+    </fieldset>
+  </div>
+  
+
+
+
+
                 </div>
                 <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio" id="dateOfDeathType-2"
                     name="dateOfDeathType" value="PARTIAL_DATE_OF_DEATH"><label class="govuk-label govuk-radios__label"
